不知修改了啥

--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "npm-run-all --parallel build dev:start",
+    "dev:start": "nodemon ./src/server/index.js",
+    "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
